# Franka-Sigma.7-Teleoperation

./: README.md
src/: sigma7 copy.cpp  sigma7.cpp
src/franka/: CMakeLists.txt  package.xml
src/franka/launch/: franka_execute.launch
src/franka/src/: franka_execute.cpp
src/sigma7/: CMakeLists.txt  package.xml
src/sigma7/include/sigma7/: dhdc.h  drdc.h
src/sigma7/lib/: libdhd.so.3  libdrd.so.3
src/sigma7/src/: sigma7.cpp
