<?xml version="1.0"?>
<package format="2">
  <name>franka_execute</name>
  <version>0.0.1</version>
  <description>Franka package</description>
  <maintainer email="e1192644@u.nus.edu">Zachary</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>franka_gripper</depend>

  <export>
  </export>
</package>