<?xml version="1.0"?>
<package format="2">
  <name>sigma7</name>
  <version>0.0.1</version>
  <description>Sigma7 package</description>
  <maintainer email="e1192644@u.nus.edu">Zachary</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
  </export>
</package>